# crypto-price-tracker

./: .env.example  .gitignore  Cargo.toml
examples/: balance.rs
src/: api.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  prelude.rs
src/api/: get_latest_listings.rs  get_latest_quotes.rs  mod.rs
src/api/binance/: mod.rs
src/api/coinmarketcap/: common.rs  get_latest_listings.rs  get_latest_listings_test.rs  get_latest_quotes.rs  get_latest_quotes_test.rs  mod.rs
src/api/kraken/: auth.rs  mod.rs
